# wt-cockpit

./: .gitignore  Cargo.toml  README.md  herdr-plugin.toml
artifacts/: README.md  herdr-deck-showcase-script.md
artifacts/video-tools/: README.md  assemble.sh  capture-scene.sh  codex-demo  demo-env  eza  ghostty-demo.conf  nvim-init.lua  showcase.filter
scripts/: open-deck.sh
src/: app.rs  ext.rs  main.rs  preview.rs  recent.rs  sessions.rs  theme.rs  ui.rs
