[package]
name = "herdr-deck"
version = "0.1.0"
edition = "2024"
description = "Companion workspace launcher for herdr-agents.nvim: open Claude and Codex in ready-made Herdr decks"
license = "MIT"
repository = "https://github.com/ctbaum/herdr-deck"

[dependencies]
ratatui = "0.30.2"
serde_json = "1"
toml = "0.9"
